Add vehicle intineraries and fix weird data stuff

--- a/components/Pill/Pill.module.css
+++ b/components/Pill/Pill.module.css
@@ -49,3 +49,8 @@
     background-color: rgba(167, 39, 132, 0.35);
     color: #a72784;
 }
+
+#green {
+    background-color: #388344;
+    color: #fff;
+}
