--- a/components/WGLMap/WGLMap.module.css
+++ b/components/WGLMap/WGLMap.module.css
@@ -3,9 +3,9 @@
     height: 100vh;
 }
 
-@supports (height: 100lvh) and (width: 100lvw) {
+@supports (height: 100dvh) and (width: 100dvw) {
     .map {
-        width: 100lvw;
-        height: 100lvh;
+        width: 100dvw;
+        height: 100dvh;
     }
 }
