fix: remove CP logo and add attribution per company request

--- a/app/globals.css
+++ b/app/globals.css
@@ -160,6 +160,10 @@ body {
     pointer-events: none;
 }
 
+.maplibregl-ctrl-attrib-inner {
+    color: black;
+}
+
 @supports (height: 100dvh) and (width: 100dvw) {
     .loader-container {
         width: 100dvw;
