feat: add localization

--- a/components/Pill/Pill.module.css
+++ b/components/Pill/Pill.module.css
@@ -59,3 +59,8 @@
     background-color: rgba(56, 131, 68, 0.35);
     color: #388344;
 }
+
+#red {
+    background-color: #ff4d4f;
+    color: #fff;
+}
